update logo link

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="btn-group pull-right" style="padding: 5px 10px 0px 0px;" ui-yield-to="navbarAction">
-        <img src="/img/BILH-Logo-New-Blue.png" height="40px">
+        <img src="img/BILH-Logo-New-Blue.png" height="40px">
       </div>
     </div>
 
