--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/app.min.css" />
   <link rel="stylesheet" href="css/responsive.min.css" />
   <script src="http://localhost:8001/target/target-script-min.js"></script>
-  <script src="cordova.js"></script>
+    <script src="cordova.js"></script>
   <script src="js/app.min.js"></script>
 </head>
 
@@ -35,14 +35,15 @@
         </div>
       </div>
       <div class="btn-group pull-right" style="padding: 5px 10px 0px 0px;" ui-yield-to="navbarAction">
-        <img src="/img/BILH-Logo-New-Blue.png" height="40px">
+        <img src="img/BILH-Logo-New-Blue.png" height="40px">
       </div>
     </div>
 
     <div class="navbar navbar-app navbar-absolute-bottom">
       <div class="btn-group justified">
-        <a href="#" class="btn btn-navbar"><i class="fa fa-info fa-navbar"></i> COVID-19 Updates</a>
+        <a href="#" class="btn btn-navbar"><i class="fa fa-info fa-navbar"></i> COVID-19</a>
         <a href="#" class="btn btn-navbar"><i class="fa fa-phone fa-navbar"></i> Employee Health</a>
+
       </div>
     </div>
 
